styled the home page

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -19,6 +19,8 @@ body {
     background: url("./img/background.jpg") no-repeat center;
     background-size: cover;
     min-height: 100vh;
+    letter-spacing: 1px;
+    line-height: 1.2;
 }
 
 
