--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,5 +3,6 @@
 @import './base/base.scss';
 
 @import './components/header.scss';
+@import './components/home.scss';
 @import './components/footer.scss';
 
