removed background colors from the header and the footer

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -16,7 +16,7 @@ body {
     background-color: $color-white;
     font-size: 1.6rem;
     background-color: yellow;
-    background: url("./img/background.jpg") no-repeat center;
+    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, 0.5)), url("./img/background.jpg") no-repeat center;
     background-size: cover;
     min-height: 100vh;
     letter-spacing: 1px;
