--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,9 +1,9 @@
 footer {
-    border-top: 1px solid black;
+    border-top: 1px solid $color-white;
     padding: 3rem;
     text-align: center;
     color: $color-white;
-    background-color: $color-black;
+    background-color: transparent;
     font-style: italic;
     position: fixed;
     bottom: 0;
