--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -4,7 +4,8 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: $color-black;
+    background-color: transparent;
+    border-bottom: 1px solid $color-white;
 }
 
 .nav {
