--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,5 +4,6 @@
 
 @import './components/header.scss';
 @import './components/home.scss';
+@import './components/projects.scss';
 @import './components/footer.scss';
 
