fixed issue with Links for each individual project

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,6 @@
 
 @import './components/header.scss';
 @import './components/home.scss';
-@import './components/projects.scss';
+@import './components/portfolio.scss';
 @import './components/footer.scss';
 
