added some icons to the project and a new bacground image

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,7 +3,7 @@
 $color-light-gray:#F5F5F5;
 $color-white: #fff;
 $color-violet: #DAC2FF;
-$color-black: #212b37;
+$color-black: #1E1E1E;
 
 
 // mixins 
