--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -3,7 +3,7 @@ footer {
     padding: 3rem;
     text-align: center;
     color: $color-white;
-    background-color: transparent;
+    background-color: $color-black;
     font-style: italic;
     position: fixed;
     bottom: 0;
