--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -4,7 +4,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: transparent;
+    background-color: $color-black;
     border-bottom: 1px solid $color-white;
 }
 
