--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,8 +2,8 @@ footer {
     border-top: 1px solid $color-white;
     padding: 3rem;
     text-align: center;
-    color: $color-white;
-    background-color: $color-black;
+    color: $color-black;
+    background-color: $color-white;
     font-style: italic;
     position: fixed;
     bottom: 0;
