--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -4,8 +4,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: $color-black;
-    border-bottom: 1px solid $color-white;
+    background-color: $color-white;
 }
 
 .nav {
@@ -18,10 +17,7 @@ header {
             width: 100%;
             display: block;
             padding: 1rem;
-            color: $color-white;
-            font-weight: 100;
+            color: $color-black;
         }
     }
 }
-
-
