finished styling the home page for mobile devices

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -5,8 +5,11 @@ $color-white: #fff;
 $color-violet: #DAC2FF;
 $color-black: #1E1E1E;
 
+$color-fb: #395795;
+$color-twitter: #1c9dec;
 
-// mixins 
+
+// mixins
 @mixin centerContent {
     // center the content
     position: absolute;
