--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,8 +2,8 @@
 @import './base/settings.scss';
 @import './base/base.scss';
 
+@import './components/navigation.scss';
 @import './components/header.scss';
 @import './components/home.scss';
 @import './components/portfolio.scss';
 @import './components/footer.scss';
-
